[package]
name = "uniswap-v3-sdk"
version = "2.0.0"
edition = "2021"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V3 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
keywords = ["uniswap-v3", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy = { version = "0.4", optional = true, features = ["contract"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
bigdecimal = "0.4.5"
derive_more = { version = "1.0.0", features = ["deref", "from"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.20"
regex = { version = "1.11", optional = true }
rustc-hash = "2.0"
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
uniswap-lens = { version = "0.4", optional = true }
uniswap-sdk-core = "3.0.0"

[features]
default = []
extensions = ["uniswap-lens/std", "alloy", "anyhow", "base64", "regex", "serde_json"]
std = ["thiserror", "uniswap-sdk-core/std"]

[dev-dependencies]
criterion = "0.5.1"
dotenv = "0.15.0"
tokio = { version = "1.40", features = ["full"] }
uniswap_v3_math = "0.5.1"

[[bench]]
name = "bit_math"
harness = false

[[bench]]
name = "sqrt_price_math"
harness = false

[[bench]]
name = "swap_math"
harness = false

[[bench]]
name = "tick_math"
harness = false
