[package]
name = "uniswap-v3-sdk"
version = "5.3.1"
edition = "2021"
rust-version = "1.88"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V3 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["uniswap-v3", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy = { version = "1.1", optional = true, default-features = false, features = ["contract"] }
alloy-primitives = { version = "1.3", default-features = false }
alloy-sol-types = { version = "1.3", default-features = false }
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true, default-features = false }
derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
once_cell = { version = "1.21", optional = true, default-features = false, features = ["critical-section"] }
regex = { version = "1.11", optional = true }
serde_json = { version = "1.0", optional = true, default-features = false }
thiserror = { version = "2", default-features = false }
uniswap-lens = { version = "0.15", optional = true }
uniswap-sdk-core = "5.3.0"

[dev-dependencies]
alloy = { version = "1.1", default-features = false, features = ["provider-anvil-node", "reqwest-rustls-tls", "signer-local"] }
criterion = "0.7"
dotenv = "0.15.0"
once_cell = "1.21"
tokio = { version = "1.47", features = ["full"] }
uniswap_v3_math = "0.6.2"

[features]
default = []
extensions = [
    "alloy",
    "base64",
    "once_cell",
    "serde_json",
    "uniswap-lens"
]
parse_price = [
    "anyhow",
    "extensions",
    "regex",
    "std"
]
std = [
    "alloy-sol-types/std",
    "alloy?/std",
    "base64?/std",
    "derive_more/std",
    "once_cell?/std",
    "serde_json?/std",
    "thiserror/std",
    "uniswap-lens?/std",
    "uniswap-sdk-core/std"
]

[[bench]]
name = "bit_math"
harness = false

[[bench]]
name = "sqrt_price_math"
harness = false

[[bench]]
name = "swap_math"
harness = false

[[bench]]
name = "tick_math"
harness = false

[[example]]
name = "from_pool_key_with_tick_data_provider"
required-features = ["extensions"]

[[example]]
name = "swap_router"
required-features = ["extensions"]

[[example]]
name = "self_permit"
required-features = ["extensions"]

[[example]]
name = "nonfungible_position_manager"
required-features = ["extensions"]
